# games101_hw

./: README.md
hw_1/: README.md  main.cpp
hw_2/: README.md  main.cpp  rasterizer.cpp  rasterizer.hpp
hw_3/: README.md  main.cpp  rasterizer.cpp
hw_4/: README.md  main.cpp
hw_5/: README.md  Renderer.cpp  Triangle.hpp
hw_5/images/: binary.ppm
hw_6/: BVH.cpp  Bounds3.hpp  README.md  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Triangle.hpp  main.cpp
hw_7/: BVH.cpp  Bounds3.hpp  CMakeSettings.json  README.md  Renderer.cpp  Renderer.hpp  Scene.cpp  Triangle.hpp  main.cpp
hw_7/images/: binary.ppm
hw_8/: README.md
hw_8/src/: rope.cpp
hw_final/: CMakeLists.txt  README.md  fft_shader.h  graphic_interface.h  install.sh  main.cpp  shader_files.h  sky_shader.h
hw_final/src/: CMakeLists.txt  application.cpp  application.h  main.cpp  sky_shader.h
